--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "Tinder for Developers",
   "dependencies": {
     "express": "^5.2.1",
-    "mongoose": "^8.20.4"
+    "mongoose": "^8.20.4",
+    "validator": "^13.15.26"
   }
 }
