--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "Tinder for Developers",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.4",
     "validator": "^13.15.26"
   }
